CalicoPolicies/Default-deny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  selector: all()
  ingress:
  - action: Deny
  egress:
  - action: Deny
