CalicoPolicies/knote-egress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: knote-egress
  namespace: Knote-ns
spec:
  selector: app == 'knote'
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: app == 'mongo'
      ports:
        - 27017
  - action: Allow
    protocol: TCP
    destination:
      selector: app == 'minio'
      ports:
        - 9000
  - action: Allow
    protocol: TCP
    destination:
      nets:
        - 0.0.0.0/0  # Allow access to any external IP (public users)
  - action: Deny


# Communicate with MongoDB pods (app: mongo) on port 27017.
# Communicate with MinIO pods (app: minio) on port 9000.
# Communicate with any external IP over TCP (public users).
# Deny any other egress traffic.
