CalicoPolicies/knote-ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: knote-ingress
  namespace: Knote-ns
spec:
  selector: app == 'knote'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      nets:
        - 0.0.0.0/0  
    destination:
      ports:
        - 80
        - 443  
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'mongo'
      ports:
        - 27017
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'minio'
      ports:
        - 9000
  - action: Deny


# Accept TCP traffic from any external IP on ports 80 and 443.
# Accept TCP traffic from MongoDB pods (app: mongo) on port 27017.
# Accept TCP traffic from MinIO pods (app: minio) on port 9000.
# Deny any other ingress traffic.
