CalicoPolicies/minio-ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: minio-ingress
  namespace: Knote-ns
spec:
  selector: app == 'minio'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'knote'
    destination:
      ports:
        - 9000
  - action: Deny
